Remove -XstartOnMainThread on all macos test to move to a few specific tests